[gd_scene load_steps=30 format=2]

[ext_resource path="res://Enemies/ghost_idle.png" type="Texture" id=1]
[ext_resource path="res://Enemies/ghost_move.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Ghost.gd" type="Script" id=3]
[ext_resource path="res://Enemies/GhostStun.gdshader" type="Shader" id=4]
[ext_resource path="res://Enemies/GhostFSM.gd" type="Script" id=5]
[ext_resource path="res://Enemies/PlayerDetection.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemies/SoftCollision.tscn" type="PackedScene" id=8]

[sub_resource type="Shader" id=21]
code = "shader_type canvas_item;

uniform vec4 stun_color: hint_color = vec4(1.0);
uniform float stun_amount: hint_range(0.0, 1.0);

void fragment() {
	vec4 base_color = texture(TEXTURE, UV);
	base_color.rgb = mix(base_color.rgb, stun_color.rgb, stun_amount);
	COLOR = base_color;
}"

[sub_resource type="ShaderMaterial" id=22]
shader = SubResource( 21 )
shader_param/stun_color = Color( 1, 1, 1, 1 )
shader_param/stun_amount = null

[sub_resource type="ShaderMaterial" id=20]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/stun_color = Color( 0.533333, 0.945098, 1, 1 )
shader_param/stun_amount = 0.0

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 576, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "move",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=8]
radius = 15.0
height = 26.0

[node name="Ghost" type="KinematicBody2D"]
material = SubResource( 22 )
scale = Vector2( 0.3, 0.3 )
collision_layer = 8
collision_mask = 0
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.329412, 0.298039, 0.313726, 0.619608 )
material = SubResource( 20 )
position = Vector2( 0, 1 )
frames = SubResource( 7 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 3 )
shape = SubResource( 8 )

[node name="StunTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="GhostFSM" type="Node" parent="."]
script = ExtResource( 5 )

[node name="PlayerDetection" parent="." instance=ExtResource( 6 )]

[node name="WanderController" parent="." instance=ExtResource( 7 )]
wander_range = 30

[node name="Label" type="Label" parent="."]
margin_left = -20.0
margin_top = -46.6667
margin_right = 20.0
margin_bottom = -32.6667
text = "idle"
align = 1
valign = 1

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]

[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
[connection signal="changed_state" from="GhostFSM" to="." method="_on_GhostFSM_changed_state"]
[connection signal="can_see_player" from="PlayerDetection" to="GhostFSM" method="_on_PlayerDetection_can_see_player"]
[connection signal="lost_player" from="PlayerDetection" to="GhostFSM" method="_on_PlayerDetection_lost_player"]

[editable path="SoftCollision"]
